<resources>
    <string name="app_name">La ruleta de las palabras</string>
    <string name="la_ruleta_de_las_palabras">La Ruleta de las Palabras</string>
    <string name="textoParpadeo">Pulse para continuar</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="registro">Regístrate</string>
    <string name="confirme_su_contrasenia">Confirme su contraseña</string>
    <string name="usuario1">Usuario</string>
    <string name="contrasenia1">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="usuario_o_contrase_a_incorrecta">Usuario o contraseña incorrecta</string>
    <string name="usuario_o_contrase_a_invalidos">Usuario o contraseña invalidos</string>
    <string name="volver_a_inicio">Volver a inicio</string>
    <string name="usuario_ya_registrado">Usuario ya registrado</string>
    <string name="las_contrase_as_no_coinciden">Las contraseñas no coinciden</string>
    <string name="rellene_todos_los_campos">Rellene todos los campos</string>
    <string name="formax">formaX</string>
    <string name="s">S</string>
    <string name="formaz">formaZ</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="formaq">formaQ</string>
    <string name="formaj">formaJ</string>
    <string name="formal">formaL</string>
    <string name="h">H</string>
    <string name="u">U</string>
    <string name="forma">formaÑ</string>
    <string name="formam">formaM</string>
    <string name="formab">formaB</string>
    <string name="formaa">formaA</string>
    <string name="format">formaT</string>
    <string name="formac">formaC</string>
    <string name="formar">formaR</string>
    <string name="a">A</string>
    <string name="j">J</string>
    <string name="r">R</string>
    <string name="b">B</string>
    <string name="g">G</string>
    <string name="i">I</string>
    <string name="c">C</string>
    <string name="p">P</string>
    <string name="m">M</string>
    <string name="formay">formaY</string>
    <string name="x">X</string>
    <string name="v">V</string>
    <string name="q">Q</string>
    <string name="o">O</string>
    <string name="ñ">Ñ</string>
    <string name="n">N</string>
    <string name="l">L</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="z">Z</string>
    <string name="formav">formaV</string>
    <string name="formau">formaU</string>
    <string name="formas">formaS</string>
    <string name="formai">formaI</string>
    <string name="formah">formaH</string>
    <string name="formag">formaG</string>
    <string name="formaf">formaF</string>
    <string name="formae">formaE</string>
    <string name="formad">formaD</string>
    <string name="formao">formaO</string>
    <string name="forman">formaN</string>
    <string name="formap">formaP</string>
    <string name="responder">Responder</string>
    <string name="respuesta">Respuesta</string>
    <string name="pasar_palabra">Pasar palabra</string>
    <string name="rellene_el_campo_respuesta">Rellene el campo respuesta</string>
    <string name="escriba_una_respuesta">Escriba una respuesta</string>
    <string name="menu">Menú</string>
    <string name="nueva_partida">Nueva partida</string>
    <string name="continuar_partida">Continuar partida</string>
    <string name="sin_responder">Sin responder</string>
    <string name="resumen_de_la_partida">Resumen de la partida</string>
    <string name="aciertos">Aciertos</string>
    <string name="errores">Errores</string>
</resources>
