<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Menu">

    <TextView
        android:id="@+id/sin_contestar"
        android:layout_width="246dp"
        android:layout_height="116dp"
        android:fontFamily="@font/noto_serif_bold"
        android:text="@string/sin_responder"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/errores"
        android:layout_width="246dp"
        android:layout_height="116dp"
        android:fontFamily="@font/noto_serif_bold"
        android:text="@string/errores"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/tituloResumen"
        android:layout_width="209dp"
        android:layout_height="92dp"
        android:fontFamily="@font/noto_serif_bold"
        android:text="@string/resumen_de_la_partida"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/aciertos"
        android:layout_width="246dp"
        android:layout_height="116dp"
        android:fontFamily="@font/noto_serif_bold"
        android:text="@string/aciertos"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

</androidx.constraintlayout.widget.ConstraintLayout>